# policy_dq

./: README.md  pyproject.toml  report.json  report.md
.kiro/hooks/: add-logging-support.kiro.hook  code-quality-review.kiro.hook  config-file-support.kiro.hook  lint.yaml  run-tests-after-commit.kiro.hook  run_tests.yaml  sync-docs-on-change.kiro.hook  type_check.yaml
.kiro/specs/: policy_dq.md
.kiro/specs/config-file-support/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md  testing.md
sample_data/: customer_invalid.csv
sample_rules/: customer_rules.yaml
src/policy_dq/: api.py  cli.py  logging_config.py  models.py
src/policy_dq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/policy_dq/mcp/: client.py  rule_loader.py
src/policy_dq/parsers/: csv_parser.py  json_parser.py
src/policy_dq/reporters/: console_reporter.py  json_reporter.py  markdown_reporter.py
src/policy_dq/rules/: loader.py
src/policy_dq/validators/: cross_field.py  email.py  engine.py  phone.py  range.py  regex.py  required.py  type_check.py  uniqueness.py
tests/unit/: test_console_reporter.py  test_cross_field.py  test_email.py  test_engine.py  test_json_reporter.py  test_markdown_reporter.py  test_phone.py  test_range.py  test_regex.py  test_required.py  test_rule_loader.py  test_type.py  test_unique.py
